# ssbp-Viewer

./: .gitignore  CMakeLists.txt  README.md  fragmentShader.js  loadSsbp.js  main.js  math.js  printer.js  ssbpPlayer.js  test.html  vertexShader.js  webgl.js
include/: ASsbpViewer.h  File_reader.h  Screenshot.h  Screenshot.hpp  SsbpData.h  SsbpPlayer.h  SsbpReader.h  SsbpResource.h  SsbpSaver.h  SsbpViewer.h  quad.h  shader.h  sprite.h  ssbpPlayer.h  ssbpReader.h  ssbpResource.h  texture.h
include/glad/: glad.h
shaders/: background.frag  background.fragment  background.vert  background.vertex  sprite.frag  sprite.fragment  sprite.vertex  ssbpOpenGL.frag  ssbpOpenGL.vert
src/: ASsbpViewer.cpp  Screenshot.cpp  SsbpPlayer.cpp  SsbpReader.cpp  SsbpResource.cpp  SsbpSaver.cpp  SsbpViewer.cpp  glad.c  main.cpp  mainScreenshot.cpp  shader.cpp  sprite.cpp  ssbpPlayer.cpp  ssbpReader.cpp  ssbpResource.cpp  texture.cpp
ssbp/: SS5Player.cpp  SS5Player.h  SS5PlayerData.h  SS5PlayerPlatform.cpp  SS5PlayerPlatform.h  SS5PlayerTypes.h  ssShader_frag.h
ssbp/common/Animator/: MersenneTwister.h  ssplayer_PartState.cpp  ssplayer_PartState.h  ssplayer_cellmap.h  ssplayer_effect.cpp  ssplayer_effect.h  ssplayer_effectfunction.cpp  ssplayer_effectfunction.h  ssplayer_macro.h  ssplayer_matrix.cpp  ssplayer_matrix.h
ssbp/common/Helper/: DebugPrint.cpp  DebugPrint.h
ssbp/common/Loader/: SsEffectBehavior.h  SsEffectElement.h  ssloader.h  ssloader_ssee.h  sstypes.h
